# serverless-inference-sandbox

./: .gitignore  Demo - SageMaker Serverless inference.ipynb  Dockerfile  LICENSE  README.md  build.sh  pyproject.toml
model1/: model.json
model2/: model.json
src/: app.py
